--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ ul {
     list-style: none;
 }
 nav ul a {
+    width:100%;
     text-decoration: none;
     color: #bababa;
     font-size: 1.25rem;
@@ -32,8 +33,12 @@ nav ul a {
     font-size: 4.6875rem;
     font-weight: 700;
     text-align: start;
-    padding-left: 18.75rem;
     padding-top: 2.5rem;
+    width: 100%;
+}
+
+.imagen-quimico{
+    width: 60%;
 }
 
 .pregunta{
@@ -54,7 +59,6 @@ nav ul a {
     font-size:x-large;
     color: white;
     text-align: start;
-    padding-left: 18.75rem;
     padding-top: 1.875rem;
 }
 .contenedor-de-fotos{
@@ -82,8 +86,6 @@ padding-bottom: 9.375rem;
     color: #ffa200;
     font-weight: 700;
     padding-top: 15.625rem;
-    padding-right: 3.125rem;
-
 }
 
 .surgimiento-parrafo{
