--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-/* font-family: 'Quicksand', sans-serif; */
+/* font-family: 'DM Sans', sans-serif;
+font-family: 'Quicksand', sans-serif;
+
+*/
 
 
 *{
@@ -164,18 +167,21 @@ main{
 .titulos-superiores{
     padding-left: 10rem;
     padding-top: 6.25rem;
+    padding-right: 89.375rem;
 }
 
 .titulos-superiores h2{
     color: orange;
     font-size: 1.875rem;
     font-family: 'Quicksand', sans-serif;
+    text-align: end;
 }
 .titulos-superiores h1{
     color: white;
     font-size: 3.125rem;
-    font-family: 'Quicksand', sans-serif;
-    font-size: 700;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-align: end;
 }
 
 .imagen-profesion{
@@ -185,19 +191,21 @@ main{
 
 .section-grids{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: auto 21% 21% 21% auto;
     grid-template-rows: auto;
     grid-template-areas: ". medicina  administración diseño . ";
     width: 100%;
     align-items: center;
     padding-top: 6.25rem;
-    gap: 2.1875rem;
+    padding-bottom: 3.125rem;
+    gap: 3.4375rem;
 }
 
 .tarjeta-medicina{
     grid-area: medicina;
     height: 100%;
     background-color: #1d60e9;
+    background-color: #1b2031;
     border-radius: 1.875rem;
     padding-top: .625rem;
 }
@@ -206,6 +214,7 @@ main{
     grid-area: administración;
     height: 100%;
     background-color: #912e0e;
+    background-color: #1b2031;
     border-radius: 1.875rem;
     padding-top: .625rem;
 }
@@ -213,6 +222,7 @@ main{
 .tarjeta-diseño{
     grid-area: diseño;
     background-color: #c65400;
+    background-color: #1b2031;
     border-radius: 1.875rem;
     height: 100%;
     padding-top: .625rem;
@@ -220,11 +230,12 @@ main{
 
 .titulo-tarjeta-medicina{
     color: white;
-    font-family: 'Quicksand', sans-serif;
+    color: #1d60e9;
+    font-family: 'DM Sans', sans-serif;
     font-weight: 700;
-    font-style:initial;
-    text-align: center;
     text-decoration: underline;
+    font-size: 1.5625rem;
+    text-align: center;
     padding-bottom: .625rem;
 }
 
@@ -240,11 +251,12 @@ main{
 
 .titulo-tarjeta-administracion{
     color: white;
-    font-family: 'Quicksand', sans-serif;
+    color: green;
+    font-family: 'DM Sans', sans-serif;
     font-weight: 700;
-    font-style:initial;
-    text-align: center;
     text-decoration: underline;
+    font-size: 1.5625rem;
+    text-align: center;
     padding-bottom: .625rem;
 }
 
@@ -260,11 +272,12 @@ main{
 
 .titulo-tarjeta-diseño{
     color: white;
-    font-family: 'Quicksand', sans-serif;
+    color: orange;
+    font-family: 'DM Sans', sans-serif;
     font-weight: 700;
-    font-style:initial;
-    text-align: center;
     text-decoration: underline;
+    font-size: 1.5625rem;
+    text-align: center;
     padding-bottom: .625rem;
 }
 
@@ -276,6 +289,201 @@ main{
     text-align: center;
     font-style:normal;
     padding-bottom: .625rem;
+}
+
+.disponible-tarjeta{
+    color: orange;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.875rem;
+    text-align: center;
+    font-weight: 600;
+    padding-top: 1.25rem;
+}
+
+.descripcion-tarjeta{
+    color: #9d9d9d;
+    font-family: 'Quicksand', sans-serif;
+    font-size: medium;
+    text-align: center;
+    font-weight: 500;
+    padding: 1.25rem .9375rem;
+}
+
+.lista-de-contenido{
+    color: #b0b0b0;
+    font-family: 'Quicksand', sans-serif;
+    font-size:large;
+    font-weight: 700;
+    text-align: left;
+    padding-left: 2.5rem;
+    padding-bottom: 1.875rem;
+}
+
+.registro{
+    padding-left: 180px;
+    padding-bottom: 9.375rem;
+}
+.titulo-registro{
+    font-size: larger;
+    color: orange;
+    font-weight: bolder;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.instruccion-registro{
+    color: white;
+    font-weight: bold;
+    font-size: large;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.otros-cursos{
+    padding-left: 11.25rem;
+    padding-top: 6.25rem;
+    padding-right: 75rem;
+}
+
+.otros-cursos h1{
+    color: white;
+    font-size: 3.125rem;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-align: start;
+}
+
+.imagen-profesion{
+    width: 15.625rem;
+    height: 15.625rem;
+}
+
+.section-grids-2{
+    display: grid;
+    grid-template-columns: auto 21% 21% 21% auto;
+    grid-template-rows: auto;
+    grid-template-areas: ". ingenieria arquitectura programacion . ";
+    width: 100%;
+    align-items: center;
+    padding-top: 6.25rem;
+    padding-bottom: 3.125rem;
+    gap: 3.4375rem;
+}
+
+.tarjeta-ingenieria{
+    grid-area: ingenieria;
+    height: 100%;
+    background-color: #1d60e9;
+    background-color: #1b2031;
+    border-radius: 1.875rem;
+    padding-top: .625rem;
+}
+
+.tarjeta-arquitectura{
+    grid-area: arquitectura;
+    height: 100%;
+    background-color: #912e0e;
+    background-color: #1b2031;
+    border-radius: 1.875rem;
+    padding-top: .625rem;
+}
+
+.tarjeta-programacion{
+    grid-area: programacion;
+    background-color: #c65400;
+    background-color: #1b2031;
+    border-radius: 1.875rem;
+    height: 100%;
+    padding-top: .625rem;
+}
+
+.titulo-tarjeta-ingenieria{
+    color: white;
+    color: #1d60e9;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-decoration: underline;
+    font-size: 1.5625rem;
+    text-align: center;
+    padding-bottom: .625rem;
+}
+
+.parrafo-superior-ingenieria{
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 1.25rem;
+    text-align: center;
+    font-style:normal;
+    padding-bottom: .625rem;
+}
+
+.titulo-tarjeta-arquitectura{
+    color: white;
+    color: green;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-decoration: underline;
+    font-size: 1.5625rem;
+    text-align: center;
+    padding-bottom: .625rem;
+}
+
+.parrafo-superior-arquitectura{
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 1.25rem;
+    text-align: center;
+    font-style:normal;
+    padding-bottom: .625rem;
+}
+
+.titulo-tarjeta-programacion{
+    color: white;
+    color: orange;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-decoration: underline;
+    font-size: 1.5625rem;
+    text-align: center;
+    padding-bottom: .625rem;
+}
+
+.parrafo-superior-programacion{
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    font-size: 1.25rem;
+    text-align: center;
+    font-style:normal;
+    padding-bottom: .625rem;
+}
+
+.disponible-tarjeta{
+    color: orange;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.875rem;
+    text-align: center;
+    font-weight: 600;
+    padding-top: 1.25rem;
+}
+
+.descripcion-tarjeta{
+    color: #9d9d9d;
+    font-family: 'Quicksand', sans-serif;
+    font-size: medium;
+    text-align: center;
+    font-weight: 500;
+    padding: 1.25rem .9375rem;
+}
+
+.lista-de-contenido{
+    color: #b0b0b0;
+    font-family: 'Quicksand', sans-serif;
+    font-size:large;
+    font-weight: 700;
+    text-align: left;
+    padding-left: 2.5rem;
+    padding-bottom: 1.875rem;
 }
 /*footer*/
 
