--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,10 @@ font-family: 'Quicksand', sans-serif;
     padding: 0;
     box-sizing: border-box;
 }
-
+/***************************INDEX.HTML*********************************/
+body{
+    background-color: white;
+}
 /*header*/
 header{
 height: 8.75rem;
@@ -121,12 +124,16 @@ padding-bottom: 9.375rem;
     padding-top: 1.25rem;
 }
 
+.texto-footer{
+    font-family: 'DM Sans', sans-serif;
+    font-size: .9375rem;
+}
 /*footer*/
 
 
 
 
-/*CURSOS.HTML*/
+/***************************CURSOS.HTML*********************************/
 
 
 /*header cursos.html*/
@@ -165,27 +172,27 @@ main{
 }
 
 .titulos-superiores{
-    padding-left: 10rem;
+    padding-left: 11.25rem;
     padding-top: 6.25rem;
-    padding-right: 89.375rem;
 }
 
 .titulos-superiores h2{
     color: orange;
     font-size: 1.875rem;
     font-family: 'Quicksand', sans-serif;
-    text-align: end;
+    text-align: start;
 }
 .titulos-superiores h1{
     color: white;
     font-size: 3.125rem;
     font-family: 'DM Sans', sans-serif;
     font-weight: 700;
-    text-align: end;
+    text-align: start;
 }
 
 .imagen-profesion{
-    width: 15.625rem;
+    width: 90%;
+    margin: 0 5%;
 }
 
 .section-grids{
@@ -351,8 +358,8 @@ main{
 }
 
 .imagen-profesion{
-    width: 15.625rem;
-    height: 15.625rem;
+    width: 90%;
+    margin: 0 5%;
 }
 
 .section-grids-2{
@@ -363,7 +370,7 @@ main{
     width: 100%;
     align-items: center;
     padding-top: 6.25rem;
-    padding-bottom: 3.125rem;
+    padding-bottom: 5rem;
     gap: 3.4375rem;
 }
 
@@ -484,8 +491,48 @@ main{
     padding-left: 2.5rem;
     padding-bottom: 1.875rem;
 }
+
 /*footer*/
 
+.section-footer{
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    gap: 2.5rem;
+}
+
+.imagen-redes{
+    width: 2.8125rem;
+}
+
+.footer-copyright{
+    background-color: black;
+}
+
+.lista-opiniones{
+    display: flex;
+    font-family: 'DM Sans', sans-serif;
+    font-size: .9375rem;
+    color: #474e56;
+    text-decoration: none;
+    justify-content: center;
+    gap: .9375rem;
+    padding-top: 3rem;
+    padding-bottom: 1rem;
+    border-bottom: .0625rem;
+    margin-bottom: 1rem;
+}
+
+.copyright{
+    color: #474e56;
+    text-align: center;
+    font-family: 'DM Sans', sans-serif;
+    padding-top: 1.5rem;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+}
+
+/***************************EXÁMENES.HTML*********************************/
 /*media 1024*/
 
 /*media 768*/
@@ -495,6 +542,142 @@ main{
 /*media 320*/
 
 
+/************header****************/
+
+/************main****************/
+.titulos-superiores-examenes{
+    padding-left: 11.25rem;
+    padding-top: 6.25rem;
+    padding-bottom: 7.5rem;
+}
+
+.titulos-superiores-examenes h2{
+    color: orange;
+    font-size: 1.875rem;
+    font-family: 'Quicksand', sans-serif;
+    text-align: start;
+    
+}
+.titulos-superiores-examenes h1{
+    color: white;
+    font-size: 3.125rem;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-align: start;
+}
+
+.titulo{
+    padding-bottom: 6.25rem;
+    padding-left: 11.25rem;
+}
+.titulo-examenes{
+    font-size: x-large;
+    color: orange;
+    font-weight: bolder;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.imagen-examen{
+    width: 70%;
+    justify-self: center;  
+    margin: 0 15%;
+}
+
+.section-grids-3{
+    display: grid;
+    grid-template-columns: auto 25% 25% auto;
+    grid-template-rows: auto;
+    grid-template-areas: ". examen1 examen2 . ";
+    width: 100%;
+    justify-content: center;
+    padding-bottom: 6.25rem;
+    gap: 5rem;
+}
+
+.examen-1{
+    grid-area: examen1;
+    height: 100%;
+    background-color: #1b2031;
+    border-radius: 1.875rem;
+    padding-top: .625rem;
+}
+
+.examen-2{
+        grid-area: examen2;
+        height: 100%;
+        background-color: #1b2031;
+        border-radius: 1.875rem;
+        padding-top: .625rem;
+}
+
+.titulo-examen-1{
+    color: white;
+    color: #1d60e9;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-decoration: underline;
+    font-size: 1.5625rem;
+    text-align: center;
+    padding-bottom: .625rem;
+}
+
+.titulo-examen-2{
+    color: white;
+    color: green;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-decoration: underline;
+    font-size: 1.5625rem;
+    text-align: center;
+    padding-bottom: .625rem;
+}
+
+.disponible-tarjeta-examen{
+    color: orange;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.875rem;
+    text-align: center;
+    font-weight: 600;
+    padding-top: 1.25rem;
+}
+
+.descripcion-tarjeta-examen{
+    color: #9d9d9d;
+    font-family: 'Quicksand', sans-serif;
+    font-size: medium;
+    text-align: center;
+    font-weight: 500;
+    padding: 1.25rem .9375rem;
+}
+
+.lista-de-contenido-examen{
+    color: #b0b0b0;
+    font-family: 'Quicksand', sans-serif;
+    font-size:large;
+    font-weight: 700;
+    text-align: left;
+    padding-left: 2.5rem;
+    padding-bottom: 1.875rem;
+}
+
+.section-dudas{
+    padding-left: 180px;
+    padding-bottom: 9.375rem;
+}
+.titulo-dudas{
+    font-size: larger;
+    color: orange;
+    font-weight: bolder;
+    font-family: 'DM Sans', sans-serif;
+}
+
+.instruccion-dudas{
+    color: white;
+    font-weight: bold;
+    font-size: large;
+    font-family: 'Quicksand', sans-serif;
+}
+/************footer****************/
 
 
 
