--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ a{
     text-decoration: none;
 }
 
+.lista-opiniones a:visited{
+    color: #474e56;
+    text-decoration: none;
+}
 /***************************INDEX.HTML*********************************/
 body{
     background-color: white;
@@ -67,7 +71,7 @@ nav ul a {
 .primera-seccion{
     padding-bottom: 9.375rem;
 }
-.descripcion-orientate {
+.descripcion-orient {
     font-size:x-large;
     color: white;
     text-align: start;
@@ -694,5 +698,128 @@ main{
 }
 /************footer****************/
 
+/*******************************MATERIAL.HTML********************/
 
+/*************header************/
+
+/*************main***************/
+
+.titulos-superiores-material{
+    padding-left: 11.25rem;
+    padding-top: 6.25rem;
+    padding-bottom: 7.5rem;
+}
+
+.titulos-superiores-material h2{
+    color: orange;
+    font-size: 1.875rem;
+    font-family: 'Quicksand', sans-serif;
+    text-align: start;
+}
+.titulos-superiores-material h1{
+    color: white;
+    font-size: 3.125rem;
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 700;
+    text-align: start;
+}
+
+.manual-2023{
+    display: grid;
+    grid-template-columns: auto 25% 40% auto;
+    grid-template-rows: auto;
+    grid-template-areas: ". manual2023 descripcion .";
+}
+
+.imagen-manual-2023{
+    grid-area: manual2023;
+}
+
+.descripcion-manual-2023{
+    grid-area: descripcion;
+}
+
+.imagen-manual-2023 img{
+    width: 70%;
+    margin: 20%;
+
+}
+
+.descripcion-manual-2023 h2{
+    font-family: 'DM Sans', sans-serif;
+    font-style: none;
+    font-size: 1.875rem;
+    color: orange;
+    text-align: center;
+    padding-bottom: 2.5rem;
+    margin-top: 20%;
+}
+
+.p-1-manual{
+    font-family: 'Quicksand', sans-serif;
+    color: white;
+    font-style: none;
+    font-size: 1.25rem;
+    text-align: center;
+}
+
+.p-2-manual{
+    font-family: 'Quicksand', sans-serif;
+    color: white;
+    font-style: none;
+    font-size: 1.25rem;
+    text-align: center;
+    margin-bottom: 20%;
+}
+
+
+
+.formulario-2023{
+    display: grid;
+    grid-template-columns: auto 25% 40% auto;
+    grid-template-rows: auto;
+    grid-template-areas: ". formulario2023 descripcionformulario .";
+}
+
+.imagen-formulario-2023{
+    grid-area: formulario2023;
+}
+
+.descripcion-formulario-2023{
+    grid-area: descripcionformulario;
+}
+
+.imagen-formulario-2023 img{
+    width: 70%;
+    margin: 20%;
+
+}
+
+.descripcion-formulario-2023 h2{
+    font-family: 'DM Sans', sans-serif;
+    font-style: none;
+    font-size: 1.875rem;
+    color: orange;
+    text-align: center;
+    padding-bottom: 2.5rem;
+    margin-top: 20%;
+}
+
+.p-1-formulario{
+    font-family: 'Quicksand', sans-serif;
+    color: white;
+    font-style: none;
+    font-size: 1.25rem;
+    text-align: center;
+}
+
+.p-2-formulario{
+    font-family: 'Quicksand', sans-serif;
+    color: white;
+    font-style: none;
+    font-size: 1.25rem;
+    text-align: center;
+    margin-bottom: 20%;
+}
+/************footer************/
 
