--- a/scss/layout/_main-index.scss
+++ b/scss/layout/_main-index.scss
@@ -6,31 +6,15 @@ main {
             display: grid;
             grid-template-columns: 50% 50%;
             grid-template-rows: 32.0625rem;
-            grid-template-areas: ". tituloprincipal descripcion .";
+            grid-template-areas: "tituloprincipal descripcion";
             padding-top: 4rem;
             padding-bottom: 11.25rem;
             
             .titulo-principal{
-                grid-area: tituloprincipal;
-                font-family: 'Quicksand', sans-serif;
-                color: white;
-                font-size: 4.6875rem;
-                font-weight: 700;
-                text-align: end;
-                padding-top: 3.75rem;
-                padding-right: 1.5625rem;
-                width: 100%;
+                @include presentacion (tituloprincipal, 'Quicksand', white, 4.6875rem, 700, 3.75rem, 1.5625rem, end, 100%);
             }
             .descripcion-orient{
-                grid-area: descripcion;
-                font-size: x-large;
-                color: white;
-                text-align: start;
-                padding-top: 1.875rem;
-                font-family: 'DM Sans', sans-serif;
-                text-align: end;
-                padding-top: 3.75rem;
-                padding-right: 1.5625rem;
+                @include presentacion (descripcion, 'DM Sans', white, x-large, 500, 3.75rem, 1.5625rem, end, 100%);
             }
             .segunda-seccion{
                 display: flex;
@@ -41,7 +25,7 @@ main {
                     animation-name: efecto_doctor;
                     animation-iteration-count: 1;
                     animation-timing-function: ease-in;
-                    animation-duration: 0.5s;
+                    animation-duration: 0.3s;
                     animation-delay: 0.1ms
                 }
             }
@@ -98,9 +82,9 @@ main {
             padding-bottom: 9.375rem;
             .surgimiento {
                 font-family: 'Quicksand', sans-serif;
+                color: #ffa200;
                 text-align: center;
                 font-size: 2.5rem;
-                color: #ffa200;
                 font-weight: 700;
                 padding-bottom: 6.25rem;
             }
@@ -109,6 +93,7 @@ main {
                 color: white;
                 text-align: center;
                 font-size: 1.5625rem;
+                font-weight: 400;
                 justify-content: center;
                 padding: 5% 5%;
                 border:1px solid #ffa200;
@@ -122,22 +107,24 @@ main {
             background-color:#212429;
             .pregunta-dedicacion{
                 font-family: 'Quicksand', sans-serif;
+                color: #ffa200;
                 text-align: center;
                 font-size: 2.5rem;
-                color: #ffa200;
                 font-weight: 700;
                 padding-bottom: 6.25rem;
             }
             .dedicacion-parrafo{
-                font-family: 'Quicksand', sans-serif;
+            font-family: 'Quicksand', sans-serif;
                 color: white;
                 text-align: center;
                 font-size: 1.5625rem;
+                font-weight: 400;
                 justify-content: center;
                 padding: 5% 5%;
                 border:1px solid #ffa200;
                 border-radius: 1.875rem;
-                margin: 0 25%;
+                margin: 0 25%; 
             }
+            
         }
     }
